[package]
name = "conrads-law"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspaces]
resolver = 2

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.10.1" , features = ["dynamic_linking"]}
rand = "0.8.5"